--- a/index.html
+++ b/index.html
@@ -1,74 +1,86 @@
+<!-- Clone by @WusThanhDieu -->
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <title>Repo By Phước</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-</head>
-<body>
-
-<div class="container">
-	<h1><img src="CydiaIcon.png"> NVP Repo </h1>
-</div>
-
-<div class="container">
-	<div class="well">
-		<p><span class="text-primary"><b>NVP Repo </span></b> hiện có trên cydia</p>
-		<a class="btn btn-sm btn-default" href="sileo://source/https://https://nvp-jailbreak.github.io/repo.nvp/">Thêm vào Sileo</a>
-		<a class="btn btn-sm btn-default" href="cydia://url/https://cydia.saurik.com/api/share#?source=https://nvp-jailbreak.github.io/repo.nvp/">Thêm vào Cydia</a>
-	</div>
-</div>
-
-<div class="container">
-  <h3 id="wells" class="page-header">Contact</h3>
-</div>
-
-<div class="container">
-	<div class="panel panel-default">
-	  <div class="panel-heading">Social Network</div>
-	  <div class="panel-body">
-		Liên Hệ Tôi Tại Facebook<br /><br />
-		<a class="btn btn-xs btn-default" href="https://facebook.com/NVP.Vanphuoc">Facebook</a>
-	  </div>
-	</div>
-</div>
-<div class="container">
-  <h3 id="wells" class="page-header">Apple Arcade Cracked</h3>
-</div>
-
-<div class="container">
-	<div class="panel panel-default">
-	  <div class="panel-heading">Apple Arcade iPA</div>
-	  <div class="panel-body">
-		Apple Arcade iPA now on Google Drive<br /><br />
-		<a class="btn btn-xs btn-default" href="https://drive.google.com/drive/folders/1B6O3MC-yWJ5uWKuCRU2QD5ny5ZrUpNFK?usp=sharing">Google Drive</a>
-	  </div>
-	</div>
-</div>
-<div class="container">
-  <h3 id="wells" class="page-header">Youtube for Old iOS</h3>
-</div>
-
-<div class="container">
-	<div class="panel panel-default">
-	  <div class="panel-heading">Cảnh Báo: iDevice Cần Được jailbroken và cài Appsync!</div>
-	  <div class="panel-body">
-		Chọn Phiên Bản Ios<br /><br />
-		<a class="btn btn-xs btn-default" href="itms-services://?action=download-manifest&url=https://archive.org/download/test_20210601/TEST.plist">Youtube iOS 6</a>
-		<a class="btn btn-xs btn-default" href="itms-services://?action=download-manifest&url=https://archive.org/download/test_20210602/TEST.plist">Youtube iOS 7</a>
-		<a class="btn btn-xs btn-default" href="itms-services://?action=download-manifest&url=https://archive.org/download/test_20210602_202106/TEST.plist">Youtube iOS 8</a>
-		<a class="btn btn-xs btn-default" href="https://drive.google.com/file/d/12OZN6KkOo4I1AQIlL3GJQM6c89PwLfz8/view?usp=sharing">Youtube No ads (deb file)</a>
-	  </div>
-	</div>
-</div>
-<div class="container">
-	<div class="panel panel-default">
-	  <div class="panel-heading">JAILBREAK iOS 14.0 to 14.7.1 (JAILBREAK Bằng Web)</div>
-		<a class="btn btn-xs btn-default" href="https://youtu.be/dQw4w9WgXcQ">Ấn Đây Để Jailbreak</a>
-	  </div>
-	</div>
-</div>
-</body>
+<html lang="en" class="dark">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Github WusThanhDieu</title>
+    <link href="https://fonts.bunny.net/css?family=instrument-sans:400,500,600" rel="stylesheet"/>
+    <link rel="stylesheet" href="/static/css/app.css" />
+  </head>
+  <body class="font-sans antialiased">
+    <div
+      id="app"
+      data-page='{
+        "component": "views/home",
+        "props": {
+          "errors": {},
+          "name": "Github WusThanhDieu",
+          "quote": {
+            "message": "",
+            "author": ""
+          },
+          "auth": {
+            "user": null
+          },
+          "ziggy": {
+            "port": null,
+            "defaults": [],
+            "routes": {
+              "home": {
+                "uri": "/",
+                "methods": ["GET", "HEAD"]
+              },
+              "show-create-form": {
+                "uri": "create-message/{id?}",
+                "methods": ["GET", "HEAD"],
+                "parameters": ["id"]
+              },
+              "create-form": {
+                "uri": "create-message",
+                "methods": ["POST"]
+              },
+              "login": {
+                "uri": "login",
+                "methods": ["GET", "HEAD"]
+              },
+              "logout": {
+                "uri": "logout",
+                "methods": ["POST"]
+              },
+              "storage.local": {
+                "uri": "storage/{path}",
+                "methods": ["GET", "HEAD"],
+                "wheres": {
+                  "path": ".*"
+                },
+                "parameters": ["path"]
+              }
+            },
+            "location": ""
+          },
+          "message": "",
+          "client": {
+            "fontName": "Mali",
+            "color": "#ff0019",
+            "messages": [
+              "Github WusThanhDieu",
+              "Test 1",
+              "Test 2"
+            ],
+            "music": "//thanhdieu.com/music.mp3"
+          },
+          "clientId": "/"
+        },
+        "url": "/",
+        "version": "",
+        "clearHistory": false,
+        "encryptHistory": false
+      }
+      '
+    >
+  </div>
+  <script type="module" src="/static/js/app.js"></script>
+  <script type="module" src="/static/js/home.js"></script>
+  </body>
 </html>
