--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         "component": "views/home",
         "props": {
           "errors": {},
-          "name": "Github WusThanhDieu",
+          "name": "yeuu lacc",
           "quote": {
             "message": "",
             "author": ""
